--- a/main.ipynb
+++ b/main.ipynb
@@ -56,21 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-71225e3ad40e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -85,23 +73,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'pandas' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-0bdcca8a7d9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hotels.xlsx\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pandas' is not defined"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      ID           Hotel name  Price(BAM)  Hotel star rating  Distance  \\\n",
+       "0      1               Europe         139                  5       350   \n",
+       "1      2               Europe         187                  5       350   \n",
+       "2      3                Hills         255                  5     10000   \n",
+       "3      4                Hills         141                  5     10000   \n",
+       "4      5             Boutique         117                  4       450   \n",
+       "..   ...                  ...         ...                ...       ...   \n",
+       "115  116            WUD Hotel         121                  3      3200   \n",
+       "116  117               uHotel         161                  4       250   \n",
+       "117  118        Allegro Hotel         106                  4       550   \n",
+       "118  119              M Hotel         123                  4      2400   \n",
+       "119  120  Austria Trend Hotel         137                  4      3500   \n",
+       "\n",
+       "     Customer rating  Rooms  Squares       City  \n",
+       "0                8.3      1       25   Sarajevo  \n",
+       "1                8.3      2       40   Sarajevo  \n",
+       "2                8.5      3       42   Sarajevo  \n",
+       "3                8.5      2       42   Sarajevo  \n",
+       "4                8.7      1       15   Sarajevo  \n",
+       "..               ...    ...      ...        ...  \n",
+       "115              8.9      2       40  Ljubljana  \n",
+       "116              9.0      1       28  Ljubljana  \n",
+       "117              8.5      1       35  Ljubljana  \n",
+       "118              8.4      1       31  Ljubljana  \n",
+       "119              8.8      1       34  Ljubljana  \n",
+       "\n",
+       "[120 rows x 9 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ID</th>\n      <th>Hotel name</th>\n      <th>Price(BAM)</th>\n      <th>Hotel star rating</th>\n      <th>Distance</th>\n      <th>Customer rating</th>\n      <th>Rooms</th>\n      <th>Squares</th>\n      <th>City</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Europe</td>\n      <td>139</td>\n      <td>5</td>\n      <td>350</td>\n      <td>8.3</td>\n      <td>1</td>\n      <td>25</td>\n      <td>Sarajevo</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Europe</td>\n      <td>187</td>\n      <td>5</td>\n      <td>350</td>\n      <td>8.3</td>\n      <td>2</td>\n      <td>40</td>\n      <td>Sarajevo</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Hills</td>\n      <td>255</td>\n      <td>5</td>\n      <td>10000</td>\n      <td>8.5</td>\n      <td>3</td>\n      <td>42</td>\n      <td>Sarajevo</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Hills</td>\n      <td>141</td>\n      <td>5</td>\n      <td>10000</td>\n      <td>8.5</td>\n      <td>2</td>\n      <td>42</td>\n      <td>Sarajevo</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Boutique</td>\n      <td>117</td>\n      <td>4</td>\n      <td>450</td>\n      <td>8.7</td>\n      <td>1</td>\n      <td>15</td>\n      <td>Sarajevo</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>115</th>\n      <td>116</td>\n      <td>WUD Hotel</td>\n      <td>121</td>\n      <td>3</td>\n      <td>3200</td>\n      <td>8.9</td>\n      <td>2</td>\n      <td>40</td>\n      <td>Ljubljana</td>\n    </tr>\n    <tr>\n      <th>116</th>\n      <td>117</td>\n      <td>uHotel</td>\n      <td>161</td>\n      <td>4</td>\n      <td>250</td>\n      <td>9.0</td>\n      <td>1</td>\n      <td>28</td>\n      <td>Ljubljana</td>\n    </tr>\n    <tr>\n      <th>117</th>\n      <td>118</td>\n      <td>Allegro Hotel</td>\n      <td>106</td>\n      <td>4</td>\n      <td>550</td>\n      <td>8.5</td>\n      <td>1</td>\n      <td>35</td>\n      <td>Ljubljana</td>\n    </tr>\n    <tr>\n      <th>118</th>\n      <td>119</td>\n      <td>M Hotel</td>\n      <td>123</td>\n      <td>4</td>\n      <td>2400</td>\n      <td>8.4</td>\n      <td>1</td>\n      <td>31</td>\n      <td>Ljubljana</td>\n    </tr>\n    <tr>\n      <th>119</th>\n      <td>120</td>\n      <td>Austria Trend Hotel</td>\n      <td>137</td>\n      <td>4</td>\n      <td>3500</td>\n      <td>8.8</td>\n      <td>1</td>\n      <td>34</td>\n      <td>Ljubljana</td>\n    </tr>\n  </tbody>\n</table>\n<p>120 rows × 9 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
     }
    ],
    "source": [
-    "data = pandas.read_excel(\"Hotels.xlsx\")"
+    "data = pd.read_excel(\"Hotels.xlsx\", engine='openpyxl')\n",
+    "data"
    ]
   },
   {
