corrigi um erro

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A2 - Introdução à Ciência de Dados¶\n",
+    "# A2 - Introdução à Ciência de Dados\n",
     "\n",
     "Análise de dados de uma base de estadias em hotéis da Europa com 120 entradas.\n",
     "\n",
